# FileManagerWindowed

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
App/: CMakeLists.txt
App/Include/: Application.hpp  Constants.hpp  Directory.hpp  File.hpp  FileSystemAnalyzer.hpp  FileSystemEntity.hpp  Logger.hpp  OsSpecificConfig.hpp  Path.hpp  ResourceManager.hpp  SFMLInterface.hpp  SFMLPrimitivsDrawer.hpp  Utils.hpp
App/Source/: Application.cpp  Directory.cpp  File.cpp  FileSystemAnalyzer.cpp  FileSystemEntity.cpp  Logger.cpp  OsSpecificConfig.cpp  Path.cpp  ResourceManager.cpp  SFMLInterface.cpp  SFMLPrimitivsDrawer.cpp  Utils.cpp
Include/: Application.hpp  Directory.hpp  File.hpp  FileSystemAnalyzer.hpp  OsSpecificConfig.hpp  Utils.hpp
Source/: Directory.cpp  File.cpp  FileSystemAnalyzer.cpp  FileSystemEntity.cpp  Main.cpp  OsSpecificConfig.cpp  Utils.cpp
Tests/: CMakeLists.txt  TestMain.cpp
